--- a/src/App.css
+++ b/src/App.css
@@ -543,17 +543,15 @@ h1 {
 }
 #container__card .card .card_img {
   transition: opacity 1s ease-in-out;
-  opacity: 1;
+  opacity: 0;
 }
-
-.rotate {
+#container__card .card .rotate {
   animation-name: flipInY;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
   animation-duration: 0.75s;
 }
-
-.back {
+#container__card .card .back {
   transition: transform 1s ease-in-out;
   transform: rotateY(180deg);
   transform-style: preserve-3d;
